--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
 /build/
 /phpunit.xml
-/var/*
-!/var/cache
-/var/cache/*
-!var/cache/.gitkeep
-!/var/logs
-/var/logs/*
-!var/logs/.gitkeep
-!/var/sessions
-/var/sessions/*
-!var/sessions/.gitkeep
-!var/SymfonyRequirements.php
+/var/
+/var/cache/
+var/cache/.gitkeep
+/var/logs
+/var/logs/
+var/logs/.gitkeep
+/var/sessions
+/var/sessions/
+var/sessions/.gitkeep
+var/SymfonyRequirements.php
 /web/bundles/
+var/cache/dev/profiler/index.csv
+.idea/workspace.xml
+var/logs/prod.log
+var/logs/dev.log
