--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ var/cache/dev/profiler/index.csv
 .idea/workspace.xml
 var/logs/prod.log
 var/logs/dev.log
+var/logs/dev.log
+var/cache/dev/pools/x8CAfK1BN9/P/O/BgdKUiIuprTJxpN+dyDQ
+var/cache/dev/pools/x8CAfK1BN9/O/O/FCY2RgpNoG0wH1afwogX
+var/cache/dev/pools/x8CAfK1BN9/5/7/MwPMH7zU2MKB0q8nLqHQ
+var/cache/dev/pools/x8CAfK1BN9/+/X/ATHJpIqtTcwf7AIa4VZi
+.idea/workspace.xml
