--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,3 +22,6 @@ security:
 
             # https://symfony.com/doc/current/security/form_login_setup.html
             #form_login: ~
+            form_login:
+                login_path: login
+                check_path: login
