--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,7 +5,26 @@ security:
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         in_memory:
-            memory: ~
+            memory:
+                users:
+                    inkoper:
+                       password: inkoper
+                       roles: 'ROLE_INKOPER'
+                    magazijnbeheerder:
+                        password: magazijn
+                        roles: 'ROLE_MAGAZIJNBEHEERDER'
+                    administrator:
+                        password: administrator
+                        roles: 'ROLE_ADMINISTRATOR' 
+
+
+    access_control:
+    - { path: '^/*', roles: [ROLE_INKOPER]}
+    - { path: '^/*', roles: [ROLE_MAGAZIJNBEHEERDER]} 
+    - { path: '^/*', roles: [ROLE_ADMINISTRATOR]}  
+
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
 
     firewalls:
       # disables authentication for assets and the profiler, adapt it according to your needs
@@ -18,10 +37,9 @@ security:
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
+            http_basic: ~
 
             # https://symfony.com/doc/current/security/form_login_setup.html
             #form_login: ~
-            form_login:
-                login_path: login
-                check_path: login
+            
+            
