--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,14 +20,14 @@ security:
     access_control:
         - { path: '^/inkoper/*', roles: [ROLE_INKOPER] }
         - { path: '^/magazijnbeheerder/*', roles: [ROLE_MAGAZIJNBEHEERDER] }
-        - { path: '^/logout', roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
+      #  - { path: '/logout', roles: [ROLE_INKOPER]}
 
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
 
     firewalls:
-
-        # disables authentication for assets and the profiler, adapt it according to your needs
+    
+         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
