--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,13 +20,12 @@ security:
     access_control:
         - { path: '^/inkoper/*', roles: [ROLE_INKOPER] }
         - { path: '^/magazijnmeester/*', roles: [ROLE_MAGAZIJNMEESTER] }
-      #  - { path: '/logout', roles: [ROLE_INKOPER]}
+        - { path: '/logout', roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
 
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
 
     firewalls:
-    
          # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
