--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -39,4 +39,4 @@ security:
             http_basic: ~
 
             # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+            #form_login:
